--- a/wishlist/templates/login.html
+++ b/wishlist/templates/login.html
@@ -15,17 +15,17 @@
         <table>
             <tr>
                 <td>Username: </td>
-                <td><input type="text" name="username" placeholder="Username" class="form-control"></td>
+                <td><input type="text" name="username" placeholder="Username" class="shadow p-1 mb-2 bg-body rounded"></td>
             </tr>
                     
             <tr>
                 <td>Password: </td>
-                <td><input type="password" name="password" placeholder="Password" class="form-control"></td>
+                <td><input type="password" name="password" placeholder="Password" class="shadow p-1 mb-2 bg-body rounded"></td>
             </tr>
 
             <tr>
                 <td></td>
-                <td><input class="btn login_btn" type="submit" value="Login"></td>
+                <td><input class="btn btn-outline-primary" type="submit" value="Login"></td>
             </tr>
         </table>
     </form>
